--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/edtNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:ems="10"
                     android:layout_weight="1"/>
         </LinearLayout>
@@ -77,7 +77,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/green">
+            android:background="@color/green" android:padding="10dp">
         <EditText
                 android:id="@+id/edtNameResult"
                 android:layout_width="wrap_content"
@@ -97,5 +97,4 @@
                 android:layout_weight="1"
                 android:background="@android:color/transparent"/>
     </LinearLayout>
-
 </LinearLayout>
