--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,11 +13,10 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
             <TextView
-                    android:id="@+id/txtName"
-                    android:text="이름: "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/input_name" />
             <EditText
                     android:id="@+id/edtName"
                     android:layout_width="wrap_content"
@@ -31,12 +30,12 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
+
             <TextView
-                    android:id="@+id/txtNumber"
-                    android:text="인원: "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/input_number" />
             <EditText
                     android:id="@+id/edtNumber"
                     android:layout_width="wrap_content"
@@ -52,21 +51,21 @@
                 android:orientation="horizontal">
             <Button
                     android:id="@+id/btnInit"
-                    android:text="초기화"
+                    android:text="@string/init"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"/>
             <Button
                     android:id="@+id/btnInsert"
-                    android:text="입력"
+                    android:text="@string/insert"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"/>
             <Button
                     android:id="@+id/btnSelect"
-                    android:text="조회"
+                    android:text="@string/select"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -77,7 +76,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/green" android:padding="10dp">
+            android:background="@color/green"
+            android:padding="10dp">
         <EditText
                 android:id="@+id/edtNameResult"
                 android:layout_width="wrap_content"
